--- a/pbdr_v1/SPLAT_20210401.yaml
+++ b/pbdr_v1/SPLAT_20210401.yaml
@@ -1,4 +1,4 @@
-version: {date: 20210401, name:'SPLAT'}
+version: {date: 20210401, name: 'SPLAT'}
 
 sim_config: {nsky_sim: 0, ndet_sim: 0, save_summary: True, save_sim: True, config_dir: config, freq_resol: 0.1}
 
@@ -9,7 +9,6 @@ universe:
   atmosphere: {atm_model_file: atm_20201217.hdf5}
 
 instrument:
-  name : 'SPLAT'
   site : Pole
   sky_temp : None
   elevation : 50.0
@@ -67,10 +66,10 @@ instrument:
         skip_optical_elements: []
         chan_config:
           elements:   # note: we are pretending all the bands are in one tube to make IRshaders work
-            ulf:   {band_center:  20.0,  fractional_bandwidth: 0.250, pixel_size: 21.1, num_det_per_water:  54, det_eff: 0.65}
-            lf_1:  {band_center:  25.75, fractional_bandwidth: 0.330, pixel_size: 16.1, num_det_per_water:  96, det_eff: 0.63}
-            lf_2:  {band_center:  38.75, fractional_bandwidth: 0.452, pixel_size: 16.1, num_det_per_water:  96, det_eff: 0.65}
-            mf_1:  {band_center:  91.5,  fractional_bandwidth: 0.317, pixel_size:  5.3, num_det_per_water: 864, det_eff: 0.65}
-            mf_2:  {band_center: 148.5,  fractional_bandwidth: 0.276, pixel_size:  5.3, num_det_per_water: 864, det_eff: 0.68}
-            uhf_1: {band_center: 227.0,  fractional_bandwidth: 0.256, pixel_size:  5.3, num_det_per_water: 864, det_eff: 0.67}
-            uhf_2: {band_center: 285.5,  fractional_bandwidth: 0.207, pixel_size:  5.3, num_det_per_water: 864, det_eff: 0.66}
+            ULF:   {band_center:  20.0,  fractional_bandwidth: 0.250, pixel_size: 21.1, num_det_per_water:  54, det_eff: 0.65}
+            LF_1:  {band_center:  25.75, fractional_bandwidth: 0.330, pixel_size: 16.1, num_det_per_water:  96, det_eff: 0.63}
+            LF_2:  {band_center:  38.75, fractional_bandwidth: 0.452, pixel_size: 16.1, num_det_per_water:  96, det_eff: 0.65}
+            MF_1:  {band_center:  91.5,  fractional_bandwidth: 0.317, pixel_size:  5.3, num_det_per_water: 864, det_eff: 0.65}
+            MF_2:  {band_center: 148.5,  fractional_bandwidth: 0.276, pixel_size:  5.3, num_det_per_water: 864, det_eff: 0.68}
+            UHF_1: {band_center: 227.0,  fractional_bandwidth: 0.256, pixel_size:  5.3, num_det_per_water: 864, det_eff: 0.67}
+            UHF_2: {band_center: 285.5,  fractional_bandwidth: 0.207, pixel_size:  5.3, num_det_per_water: 864, det_eff: 0.66}
