--- a/pbdr_v2/SPLAT_20210605.yaml
+++ b/pbdr_v2/SPLAT_20210605.yaml
@@ -71,5 +71,5 @@ instrument:
             LF_2:  {band_center:  38.75, fractional_bandwidth: 0.452, pixel_size: 16.1, num_det_per_water:  96, det_eff: 0.65}
             MF_1:  {band_center:  91.5,  fractional_bandwidth: 0.317, pixel_size:  5.3, num_det_per_water: 864, det_eff: 0.65}
             MF_2:  {band_center: 148.5,  fractional_bandwidth: 0.276, pixel_size:  5.3, num_det_per_water: 864, det_eff: 0.68}
-            UHF_1: {band_center: 227.0, fractional_bandwidth: 0.256, pixel_size: 5.2,  num_det_per_water: 938, det_eff: 0.67}
-            UHF_2: {band_center: 285.5, fractional_bandwidth: 0.207, pixel_size: 5.2,  num_det_per_water: 938, det_eff: 0.66}
+            HF_1: {band_center: 227.0, fractional_bandwidth: 0.256, pixel_size: 5.2,  num_det_per_water: 938, det_eff: 0.67}
+            HF_2: {band_center: 285.5, fractional_bandwidth: 0.207, pixel_size: 5.2,  num_det_per_water: 938, det_eff: 0.66}
