--- a/pbdr_v2/FixedPsats.toml
+++ b/pbdr_v2/FixedPsats.toml
@@ -1,26 +1,28 @@
-[SAT_pole_20210401]
-LF_1 = 1.4
-LF_2 = 6.13
-MF1_1 = 7.4
-MF1_2 = 12.25
-MF2_1 = 7.65
-MF2_2 = 13.3
-UHF_1 = 29.88
-UHF_2 = 39.03
+[CHLAT_20210605]
+LF_1 = 0.686
+LF_2 = 3.965
+MF_1 = 4.401
+MF_2 = 12.199
+HF_1 = 33.308
+HF_2 = 47.636
 
-[SPLAT_20210401]
-ULF = 0.42
-LF_1 = 0.69
-LF_2 = 4.32
-MF_1 = 4.65
-MF_2 = 11.49
-UHF_1 = 29.31
-UHF_2 = 40.02
+[SPLAT_20210605]
+ULF_1 = 0.406
+LF_1 = 0.686
+LF_2 = 3.965
+MF_1 = 4.401
+MF_2 = 12.199
+HF_1 = 33.308
+HF_2 = 47.636
 
-[CHLAT_20210401]
-LF_1 = 0.72
-LF_2 = 3.84
-MF_1 = 4.47
-MF_2 = 13.95
-UHF_1 = 41.52
-UHF_2 = 60.78
+[SAT_LFMF_20210623]
+LF_1 = 1.295
+LF_2 = 6.014
+MF1_1 = 7.219
+MF2_1 = 7.219
+MF1_2 = 12.432
+MF2_2 = 12.432
+
+[SAT_HF_20210623]
+HF_1 = 29.298
+HF_2 = 38.064
