--- a/bolo-calc/test_cryostats/fnal_test_cryostat.yaml
+++ b/bolo-calc/test_cryostats/fnal_test_cryostat.yaml
@@ -27,7 +27,7 @@ instrument:
     default: {temperature: 293.0, reflection: 0.0, scatter_frac: 0.0, spillover: 0.0, absorption: 0.0}
     elements:
       room: {temperature: 300.0, absorption: 1.0, reflection: 0.0}
-      window:    {obj_type: Dielectric, reflection: 0.01, thickness: 0.00635, index: 1.525, loss_tangent: 3.0E-4}
+      window:    {obj_type: Dielectric, temperature: 293.0, reflection: 0.01, thickness: 0.00635, index: 1.525, loss_tangent: 3.0E-4}
       RTMLI_1 :  {temperature: 283.164516, absorption: [0.0000, 0.0000, 0.0001, 0.0003, 0.0001, 0.0004, 0.0013, 0.0027, 0.0000, 0.0000, 0.0000, 0.0001, 0.0003, 0.0013, 0.0027]}  # 10 layers
       RTMLI_2 :  {temperature: 275.797987, absorption: [0.0000, 0.0000, 0.0001, 0.0003, 0.0001, 0.0004, 0.0013, 0.0027, 0.0000, 0.0000, 0.0000, 0.0001, 0.0003, 0.0013, 0.0027]}  # 10 layers
       RTMLI_3 :  {temperature: 267.791506, absorption: [0.0000, 0.0000, 0.0001, 0.0003, 0.0001, 0.0004, 0.0013, 0.0027, 0.0000, 0.0000, 0.0000, 0.0001, 0.0003, 0.0013, 0.0027]}  # 10 layers
