--- a/bolo-calc/pbdr_v4/outputs/BaseModel.toml
+++ b/bolo-calc/pbdr_v4/outputs/BaseModel.toml
@@ -1,4 +1,4 @@
-runtime = "2022/05/26 13:40:23"
+runtime = "2022/05/26 16:39:09"
 input_id = "20220524"
 variation = "BaseModel"
 
@@ -12,6 +12,24 @@ elevation = 50.0
 pwv = 321.0
 
 ["SAT_LF_20220524.yaml".LF_1]
+optics = "<Table length=14>
+channel   element    ... elem_power_to_det_mean elem_power_from_sky_mean
+  str7     str12     ...        float64                 float64         
+------- ------------ ... ---------------------- ------------------------
+cam_1_0          cmb ...    0.11413838159646791                      0.0
+cam_1_0         dust ... 4.1984488326067153e-17    9.300450289992005e-17
+cam_1_0  synchrotron ...  4.431266214191815e-12    9.802741156029342e-12
+cam_1_0   atmosphere ...      0.194894563685827       0.4246866653914209
+cam_1_0       baffle ...     0.1481503475722404       0.7322575442602343
+cam_1_0       window ...    0.11123669858007831       0.9583836227399318
+cam_1_0     RTMLI_10 ...    0.03312186412234843       1.0104760018856338
+cam_1_0 alumina_filt ...   0.014087172567808766       1.0353301030119375
+cam_1_0   nylon_filt ...  5.897877980019029e-05       1.0096357866419792
+cam_1_0        lens1 ...   0.000138736507520086        0.999512442739292
+cam_1_0       ApStop ...   0.004474287791867419       0.9824761795922438
+cam_1_0        lens2 ... 0.00013762154596132627       0.8549563483362307
+cam_1_0      lowpass ...  6.612144468996746e-09       0.8345488714774523
+cam_1_0     detector ...                    0.0       0.7848932136245438"
 popt = 0.6204386593664958
 psat = 1.551
 net = 171.21354686641482
@@ -28,6 +46,24 @@ band_lowedge = 21.50125
 band_highedge = 29.99875
 
 ["SAT_LF_20220524.yaml".LF_2]
+optics = "<Table length=14>
+channel   element    ... elem_power_to_det_mean elem_power_from_sky_mean
+  str7     str12     ...        float64                 float64         
+------- ------------ ... ---------------------- ------------------------
+cam_1_1          cmb ...    0.21873919718876933                      0.0
+cam_1_1         dust ... 1.6468852493541454e-16    3.490217001792531e-16
+cam_1_1  synchrotron ... 2.9948197939465346e-12     6.23105331726092e-12
+cam_1_1   atmosphere ...     1.4043759101608067        2.811238630738357
+cam_1_1       baffle ...     0.3327193438334926       3.2420203887257184
+cam_1_1       window ...    0.37652116404492175       3.9314630534508144
+cam_1_1     RTMLI_10 ...    0.07459413482968198        3.987844854580321
+cam_1_1 alumina_filt ...   0.047585209370127175        4.060837021404008
+cam_1_1   nylon_filt ...  0.0002867729968673285       3.9488926079318154
+cam_1_1        lens1 ... 0.00031878216582501934        3.907236487728793
+cam_1_1       ApStop ...  0.0034934105583683244        3.806788723128529
+cam_1_1        lens2 ... 0.00029645331175863704       3.5407645027028587
+cam_1_1      lowpass ... 1.6126614018598114e-10        3.448565084225048
+cam_1_1     detector ...                    0.0       3.2433754617136583"
 popt = 2.4589303786248804
 psat = 6.147
 net = 215.60983385458678
@@ -53,6 +89,24 @@ elevation = 50.0
 pwv = 321.0
 
 ["SAT_MF_20220524.yaml".MF1_1]
+optics = "<Table length=14>
+channel   element    ... elem_power_to_det_mean elem_power_from_sky_mean
+  str7     str12     ...        float64                 float64         
+------- ------------ ... ---------------------- ------------------------
+cam_1_0          cmb ...    0.13400226995177522                      0.0
+cam_1_0         dust ...  5.027706464906949e-16    1.241422223238937e-15
+cam_1_0  synchrotron ...  2.566993866600754e-13    6.385859567089614e-13
+cam_1_0   atmosphere ...      1.764776399978845        4.076136258289139
+cam_1_0       baffle ...     0.3332310932182436        4.495169585139189
+cam_1_0       window ...     0.8328837466495105        6.274946360493126
+cam_1_0     RTMLI_10 ...    0.07545606072257593       6.2243898553790835
+cam_1_0 alumina_filt ...    0.10451017714539092       6.4206913879825915
+cam_1_0   nylon_filt ...  0.0017368404478780167        6.193424697485593
+cam_1_0        lens1 ... 0.00015112351781404378        6.097454277814769
+cam_1_0       ApStop ...   0.001936371452827458        5.888067771712392
+cam_1_0        lens2 ...  0.0001571583959523795       4.9344162243161485
+cam_1_0      lowpass ... 1.7692497521119675e-19        4.773917757724909
+cam_1_0     detector ...                    0.0       4.4898696511402765"
 popt = 3.2488412414810703
 psat = 8.21
 net = 313.5295309819176
@@ -69,6 +123,24 @@ band_lowedge = 74.8
 band_highedge = 95.2
 
 ["SAT_MF_20220524.yaml".MF1_2]
+optics = "<Table length=14>
+channel   element    ... elem_power_to_det_mean elem_power_from_sky_mean
+  str7     str12     ...        float64                 float64         
+------- ------------ ... ---------------------- ------------------------
+cam_1_1          cmb ...    0.11863217636578977                      0.0
+cam_1_1         dust ... 1.8268849059441696e-15     4.00418425623575e-15
+cam_1_1  synchrotron ...  9.121116404637058e-14   2.0383504417424254e-13
+cam_1_1   atmosphere ...      1.585111043132795       3.3513727388103325
+cam_1_1       baffle ...     0.5664539668884877        4.378894478959794
+cam_1_1       window ...      2.435903633334476        9.135372474116897
+cam_1_1     RTMLI_10 ...     0.1299298644418137        8.919567459769285
+cam_1_1 alumina_filt ...    0.30273408190145323        9.453436124195905
+cam_1_1   nylon_filt ...   0.007955413860287485        9.020342501516948
+cam_1_1        lens1 ...  4.543406671287456e-05        8.731698783561143
+cam_1_1       ApStop ... 0.00012443174297583343        8.335171601245742
+cam_1_1        lens2 ... 4.2759428346779774e-05        7.793447960948903
+cam_1_1      lowpass ... 1.5545343245776675e-30         7.47032565961994
+cam_1_1     detector ...                    0.0        7.025841282872553"
 popt = 5.146932805163232
 psat = 13.295
 net = 335.03860142615457
@@ -85,6 +157,24 @@ band_lowedge = 129.05
 band_highedge = 160.95
 
 ["SAT_MF_20220524.yaml".MF2_1]
+optics = "<Table length=14>
+channel   element    ... elem_power_to_det_mean elem_power_from_sky_mean
+  str7     str12     ...        float64                 float64         
+------- ------------ ... ---------------------- ------------------------
+cam_1_2          cmb ...     0.1414679114501636                      0.0
+cam_1_2         dust ...  6.887688335799912e-16     1.61867301251183e-15
+cam_1_2  synchrotron ...  2.173341336658808e-13    5.118472529843581e-13
+cam_1_2   atmosphere ...       1.49064861770466        3.335372439868789
+cam_1_2       baffle ...     0.3846395486822205        3.987512184344752
+cam_1_2       window ...      1.075990706398049        6.221677603512886
+cam_1_2     RTMLI_10 ...     0.0872842323394073       6.1720636608626425
+cam_1_2 alumina_filt ...    0.13480141538229418        6.422050878085695
+cam_1_2   nylon_filt ...  0.0025216849239333736        6.182949046151866
+cam_1_2        lens1 ...  0.0001357945719933385         6.07546936849691
+cam_1_2       ApStop ...  0.0011539466007533085         5.85396217762678
+cam_1_2        lens2 ... 0.00013546515019997608       5.1224107990257295
+cam_1_2      lowpass ... 2.8882226641758637e-21        4.947534845593422
+cam_1_2     detector ...                    0.0       4.6531565222806135"
 popt = 3.318779323203893
 psat = 8.21
 net = 274.72563530395763
@@ -101,6 +191,24 @@ band_lowedge = 83.6
 band_highedge = 106.4
 
 ["SAT_MF_20220524.yaml".MF2_2]
+optics = "<Table length=14>
+channel   element    ... elem_power_to_det_mean elem_power_from_sky_mean
+  str7     str12     ...        float64                 float64         
+------- ------------ ... ---------------------- ------------------------
+cam_1_3          cmb ...    0.10943407654585817                      0.0
+cam_1_3         dust ... 2.0731018886695996e-15    4.669592912292079e-15
+cam_1_3  synchrotron ...  7.786156072874034e-14   1.7954757713722409e-13
+cam_1_3   atmosphere ...      1.601455982257386        3.487235330629191
+cam_1_3       baffle ...     0.5884991421410799         4.59431593995236
+cam_1_3       window ...     2.7090698531197748       10.020867138116618
+cam_1_3     RTMLI_10 ...    0.13527627454237565         9.74670929702988
+cam_1_3 alumina_filt ...    0.33613475677558974       10.354699688733328
+cam_1_3   nylon_filt ...   0.009217847185076728        9.860906393173961
+cam_1_3        lens1 ... 3.4068486104533504e-05         9.50365466611261
+cam_1_3       ApStop ... 0.00010798467053081983        9.054424590296078
+cam_1_3        lens2 ...   3.26021583648222e-05         8.33917199795173
+cam_1_3      lowpass ... 2.3175610582097604e-32        7.980362016328652
+cam_1_3     detector ...                    0.0        7.505530476357096"
 popt = 5.489262587882222
 psat = 13.295
 net = 359.3924230384083
@@ -126,6 +234,24 @@ elevation = 50.0
 pwv = 321.0
 
 ["SAT_HF_20220524.yaml".HF_1]
+optics = "<Table length=14>
+channel   element    ... elem_power_to_det_mean elem_power_from_sky_mean
+  str7     str12     ...        float64                 float64         
+------- ------------ ... ---------------------- ------------------------
+cam_1_0          cmb ...   0.061659105048484736                      0.0
+cam_1_0         dust ... 4.6939666318132384e-15   1.2824445337370804e-14
+cam_1_0  synchrotron ... 3.5265994949428064e-14   1.0853036648153524e-13
+cam_1_0   atmosphere ...      3.680515647705284        9.517357570465178
+cam_1_0       baffle ...     0.8401846673025137       11.009161306799017
+cam_1_0       window ...       5.72096710946595        24.33016799206874
+cam_1_0     RTMLI_10 ...    0.21390221460363903       23.023538933979996
+cam_1_0 alumina_filt ...     0.7016206543600143       24.469456605609608
+cam_1_0   nylon_filt ...    0.02123664176528632       22.977137629608162
+cam_1_0        lens1 ...  4.188884841290197e-06       21.159607468582305
+cam_1_0       ApStop ...  1.556913533678103e-05       19.894754806488027
+cam_1_0        lens2 ...   4.26552073323377e-06       17.407916378742147
+cam_1_0      lowpass ... 1.1954367078418617e-44        16.47486191248998
+cam_1_0     detector ...                    0.0       15.494607628696828"
 popt = 11.240110063792123
 psat = 28.1
 net = 749.3210345270589
@@ -142,6 +268,24 @@ band_lowedge = 197.944
 band_highedge = 256.056
 
 ["SAT_HF_20220524.yaml".HF_2]
+optics = "<Table length=14>
+channel   element    ... elem_power_to_det_mean elem_power_from_sky_mean
+  str7     str12     ...        float64                 float64         
+------- ------------ ... ---------------------- ------------------------
+cam_1_1          cmb ...    0.02528768548755682                      0.0
+cam_1_1         dust ...  5.626716122317799e-15   1.6999791112780288e-14
+cam_1_1  synchrotron ... 1.6113429590132957e-14    6.536293781545307e-14
+cam_1_1   atmosphere ...       5.06242147213934        14.10700100458683
+cam_1_1       baffle ...     0.7890347595507871       14.955434923102114
+cam_1_1       window ...     6.8162019190314425        31.75571583233183
+cam_1_1     RTMLI_10 ...    0.38966317988593824          29.832337870904
+cam_1_1 alumina_filt ...     0.8309593593130313       31.487126859982713
+cam_1_1   nylon_filt ...   0.023336729582911567       29.223203583228226
+cam_1_1        lens1 ... 4.2772003374547945e-07       25.372462738325705
+cam_1_1       ApStop ...  7.564357653050747e-07       23.603582189413103
+cam_1_1        lens2 ...  4.178033828520193e-07       21.738899816359766
+cam_1_1      lowpass ... 2.7449617792851584e-45       20.390420867661252
+cam_1_1     detector ...                    0.0       19.177190826035407"
 popt = 13.93690670695021
 psat = 34.842
 net = 1805.0478542648914
