--- a/jbolo/PBDR_2023/yamls/SAT_20230316.yaml
+++ b/jbolo/PBDR_2023/yamls/SAT_20230316.yaml
@@ -1,4 +1,4 @@
-version: {date: 20230122, name: 'SAT'}
+version: {date: 20230316, name: 'SAT'}
 config:
   dnu: 0.01 # GHz frequency resolution for integrals
 sources:
@@ -19,10 +19,10 @@ optical_elements:
   RTMLI_10 :    {obj_type: Bespoke,     temperature: 150.0, absorption: [0.00399, 0.00399, 0.00399, 0.00399, 0.00399, 0.00399, 0.00435, 0.0083] }  # 10 layers
   alumina_filt: {obj_type: LossTangent, temperature: 50.0, reflection: 0.02, thickness: 0.010, index: 3.1, loss_tangent: 3.0E-4}
   nylon_filt:   {obj_type: Bespoke,     temperature:  4.0, reflection: 0.01, absorption: [0.0003, 0.0007, 0.0056, 0.0075, 0.0223, 0.0265, 0.0698, 0.123 ]}
-  lens1:        {obj_type: LossTangent, temperature: 1.0,  reflection: 0.02, thickness: 0.055, index: 1.52, loss_tangent: 1.0E-4}
-  # lyot abs numbers from option 1, https://docs.google.com/presentation/d/1LDfZQvVTwUrymkodsj5cSliLxPjmVU3uN6-Ad17SQ1g/edit#slide=id.g1276d6665ee_0_1
-  lyot:         {obj_type: Bespoke,     temperature: 1.0,  absorption: [.141,.079,0.162,0.141,0.065,0.079,0.141,0.079]}
-  lens2:        {obj_type: LossTangent, temperature: 1.0,  reflection: 0.02, thickness: 0.059, index: 1.52, loss_tangent: 1.0E-4}
+  Lens_1:        {obj_type: LossTangent, temperature: 1.0,  reflection: 0.02, thickness: 0.090, index: 1.52, loss_tangent: 1.0E-4}
+  # SAT params table, https://docs.google.com/spreadsheets/d/1xTZEtBvrsAFqms-Ymj5rgwYUUCGBMwIwPexrQfZEYqI/edit?usp=sharing
+  lyot:         {obj_type: Bespoke,     temperature: 1.0,  absorption: [.141,.079,0.162,0.141,0.065,0.079,0.075,0.03]}
+  Lens_2:        {obj_type: LossTangent, temperature: 1.0,  reflection: 0.02, thickness: 0.037, index: 1.52, loss_tangent: 1.0E-4}
   lowpass:      {obj_type: Bespoke,     temperature: 0.1,  absorption: 0.01, reflection: 0.05}
 bolo_config:
   # For aperture stop calcs
@@ -43,7 +43,8 @@ bolo_config:
   R_bolo: 0.008   # as biased in operation, ie less than R_normal
   yield: 0.8
 readout:
-  method: 'fraction'  #in anticipation of getting NEI number/formula.
+  #method: 'fraction'  # uses channels read_frac
+  method: 'from_NEI'   # uses channels readout_NEI
 channels:
   LF_1:
     chnum: 0  # This sets the order of lists in optical elements, must start at zero and increment from there.
@@ -51,6 +52,7 @@ channels:
     nu_low: 21.50        # if a band_response file is given, these set the low and high limits of integration.
     nu_high: 30.00
     read_frac: 0.05
+    readout_NEI: 45.0e-12 # A/rtHz
     band_response : {method: flat}
     #band_response : {method: bandfile, fname : spt3g_90_pixelband.txt }
     det_eff: 0.63
@@ -64,6 +66,7 @@ channels:
     nu_low: 29.99        # if a band_response file is given, these set the low and high limits of integration.
     nu_high: 47.51
     read_frac: 0.05
+    readout_NEI: 45.0e-12 # A/rtHz
     band_response : {method: flat}
     #band_response : {method: bandfile, fname : spt3g_90_pixelband.txt }
     det_eff: 0.65
@@ -77,6 +80,7 @@ channels:
     nu_low: 74.8        # if a band_response file is given, these set the low and high limits of integration.
     nu_high: 95.2
     read_frac: 0.05
+    readout_NEI: 45.0e-12 # A/rtHz
     band_response : {method: flat}
     #band_response : {method: bandfile, fname : spt3g_90_pixelband.txt }
     det_eff: 0.65
@@ -90,6 +94,7 @@ channels:
     nu_low: 83.6        # if a band_response file is given, these set the low and high limits of integration.
     nu_high: 106.4
     read_frac: 0.05
+    readout_NEI: 45.0e-12 # A/rtHz
     band_response : {method: flat}
     #band_response : {method: bandfile, fname : spt3g_90_pixelband.txt }
     det_eff: 0.65
@@ -103,6 +108,7 @@ channels:
     nu_low: 129.05       # if a band_response file is given, these set the low and high limits of integration.
     nu_high: 160.95
     read_frac: 0.05
+    readout_NEI: 45.0e-12 # A/rtHz
     band_response : {method: flat}
     #band_response : {method: bandfile, fname : spt3g_90_pixelband.txt }
     det_eff: 0.68
@@ -116,6 +122,7 @@ channels:
     nu_low: 137.95       # if a band_response file is given, these set the low and high limits of integration.
     nu_high: 172.05
     read_frac: 0.05
+    readout_NEI: 45.0e-12 # A/rtHz
     band_response : {method: flat}
     #band_response : {method: bandfile, fname : spt3g_90_pixelband.txt }
     det_eff: 0.68
@@ -129,6 +136,7 @@ channels:
     nu_low: 197.94        # if a band_response file is given, these set the low and high limits of integration.
     nu_high: 256.06
     read_frac: 0.05
+    readout_NEI: 45.0e-12 # A/rtHz
     band_response : {method: flat}
     #band_response : {method: bandfile, fname : spt3g_90_pixelband.txt }
     det_eff: 0.67
@@ -142,6 +150,7 @@ channels:
     nu_low: 255.95       # if a band_response file is given, these set the low and high limits of integration.
     nu_high: 315.05
     read_frac: 0.05
+    readout_NEI: 45.0e-12 # A/rtHz
     band_response : {method: flat}
     #band_response : {method: bandfile, fname : spt3g_90_pixelband.txt }
     det_eff: 0.66
