--- a/jbolo/ChOpt_Report/yamls/Pole_SAT_orig_20241121_30degFOV.yaml
+++ b/jbolo/ChOpt_Report/yamls/Pole_SAT_orig_20241121_30degFOV.yaml
@@ -1,4 +1,4 @@
-version: {date: 20240924, name: 'S4_aggr+HWP'}
+version: {date: 20241121, name: 'S4_aggr+HWP_phase2'}
 # Fixed LF wafer counts, which were off by a factor of two, and adjusted MF/HF for pixels lost to pins.
 # Setting spillovers to those calculated by P. Grimes here:
 # https://docs.google.com/spreadsheets/d/1dppe8RRixXaNPDD-mv_Fw45q-ndAt2ETHffZ9tGA1W0/edit?gid=439824212#gid=439824212
@@ -17,12 +17,12 @@ sources:
     site: 'Pole'
     pwv: 321      # microns, from 0 to 8000.  321u for Pole from Kuo's paper, ~8 month observing season.
     elevation: 50  # degrees, integer from 1 to 90
-optics_defaults: {temperature: 273.0, reflection: 0.0, scatter_frac: 0.0, spillover: 0.0, absorption: 0.0}
+optics_defaults: {temperature: 243.0, reflection: 0.0, scatter_frac: 0.0, spillover: 0.0, absorption: 0.0}
 optical_elements:
   # requires python 3.7 or later, because we assume dict{} is ordered.
   # This list of elements starts with the one closest to the sky, and moves toward the detector.
   baffle:       {obj_type: Bespoke,    absorption: 0.01}
-  window:       {obj_type: LossTangent, reflection: 0.003, thickness: 0.020, index: 1.525, loss_tangent: 3.0E-4}
+  window:       {obj_type: LossTangent, temperature: 263.0, reflection: 0.003, thickness: 0.020, index: 1.525, loss_tangent: 3.0E-4}
   RTMLI_10 :    {obj_type: Bespoke,     temperature: 150.0, absorption: [0.00399, 0.00399, 0.00399, 0.00399, 0.00399, 0.00399, 0.00435, 0.0083] }  # 10 layers
   alumina_filt: {obj_type: LossTangent, temperature: 50.0, reflection: 0.02, thickness: 0.010, index: 3.1, loss_tangent: 3.0E-4}
   nylon_filt:   {obj_type: Bespoke,     temperature:  4.0, reflection: 0.01, absorption: [0.0003, 0.0007, 0.0056, 0.0075, 0.0223, 0.0265, 0.0698, 0.123 ]}
@@ -71,7 +71,7 @@ channels:
     #psat: 1.0e-12  # see psat_method above.
     horn_diameter: 30.85e-3   # meters
     pixel_spacing: 31.0e-3
-    num_det_per_wafer: 24  #9/24/2024, 19 pixels/wafer
+    num_det_per_wafer: 24  #9/24/2024, 12 pixels/wafer
   LF_2:
     chnum: 1  # This sets the order of lists in optical elements, must start at zero and increment from there.
     band_center:  36.5  # not used
@@ -99,7 +99,7 @@ channels:
     #psat: 4.60e-12  # see psat_method above.
     horn_diameter: 9.25e-3   # meters
     pixel_spacing: 9.4e-3
-    num_det_per_wafer: 294   # 9/24/2024, 215 actual pixels (217-2 for pins), 430 detectors/band
+    num_det_per_wafer: 294  
   MF_2_1:
     chnum: 3  # This sets the order of lists in optical elements, must start at zero and increment from there.
     band_center:  95.0  # not used
@@ -127,7 +127,7 @@ channels:
     #psat: 4.60e-12  # see psat_method above.
     horn_diameter: 9.25e-3   # meters
     pixel_spacing: 9.4e-3
-    num_det_per_wafer: 294   # 9/24/2024, 215 actual pixels (217-2 for pins), 430 detectors/band
+    num_det_per_wafer: 294  
   MF_2_2:
     chnum: 5  # This sets the order of lists in optical elements, must start at zero and increment from there.
     band_center:  155.0  # not used
@@ -141,7 +141,7 @@ channels:
     #psat: 4.60e-12  # see psat_method above.
     horn_diameter: 8.65e-3   # meters
     pixel_spacing: 8.8e-3
-    num_det_per_wafer: 338 # 9/24/2024, 269 actual pixels, (271-2 for pins), so 538
+    num_det_per_wafer: 338   # 9/24/2024, 269 actual pixels, (271-2 for pins), so 538
   HF_1:
     chnum: 6  # This sets the order of lists in optical elements, must start at zero and increment from there.
     band_center:  227.0  # not used
@@ -153,8 +153,8 @@ channels:
     #band_response : {method: bandfile, fname : spt3g_90_pixelband.txt }
     det_eff: 0.65
     #psat: 1.0e-12  # see psat_method above.
-    horn_diameter: 5.05e-3   # meters
-    pixel_spacing: 5.2e-3
+    horn_diameter: 9.25e-3   # meters
+    pixel_spacing: 9.4e-3
     num_det_per_wafer: 934
   HF_2:
     chnum: 7  # This sets the order of lists in optical elements, must start at zero and increment from there.
@@ -167,6 +167,6 @@ channels:
     #band_response : {method: bandfile, fname : spt3g_90_pixelband.txt }
     det_eff: 0.65
     #psat: 4.18e-12  # see psat_method above.
-    horn_diameter: 5.05e-3   # meters
-    pixel_spacing: 5.2e-3
-    num_det_per_wafer: 934
+    horn_diameter: 9.25e-3   # meters
+    pixel_spacing: 9.4e-3
+    num_det_per_wafer: 934   # 9/24/2024, 215 actual pixels (217-2 for pins), 430 detectors/band
