--- a/jbolo/ChOpt_Report/yamls/SAT_2025_PoleAlt1.yaml
+++ b/jbolo/ChOpt_Report/yamls/SAT_2025_PoleAlt1.yaml
@@ -13,7 +13,7 @@ sources:
   atmosphere:
     # This shows how to do it with the bolo-calc hdf5 file.
     source_type: hdf5  #
-    file: 'D:\pgrimes\Software\GitHub\jbolo\atmos\atm_20201217.hdf5'
+    file: 'C:\Users\Paul Grimes\Documents\GitHub\jbolo\atmos\atm_20201217.hdf5'
     site: 'Pole'
     pwv: 321      # microns, from 0 to 8000.  321u for Pole from Kuo's paper, ~8 month observing season.
     elevation: 50  # degrees, integer from 1 to 90
